# estrutura-projetos-crewai

./: README.md
Aula 1/: README.md
Aula 2/: README.md
Aula 3/: README.md
Aula 4/: README.md
Aula 5/: README.md
configuracao_tarefas_papeis_crewai/: .env  README.md  exercicios_praticos.md  pyproject.toml  resumo_didatico.md
configuracao_tarefas_papeis_crewai/src/configuracao_tarefas_papeis_crewai/: crew.py  main.py
configuracao_tarefas_papeis_crewai/src/configuracao_tarefas_papeis_crewai/config/: agents.yaml  tasks.yaml
