[project]
name = "configuracao_tarefas_papeis_crewai"
version = "0.1.0"
description = "configuracao_tarefas_papeis_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
configuracao_tarefas_papeis_crewai = "configuracao_tarefas_papeis_crewai.main:run"
run_crew = "configuracao_tarefas_papeis_crewai.main:run"
train = "configuracao_tarefas_papeis_crewai.main:train"
replay = "configuracao_tarefas_papeis_crewai.main:replay"
test = "configuracao_tarefas_papeis_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
